# 2D_Platform-game

./: .gitignore  BACKGROUND_GROUND_ALIGNMENT.md  BACKGROUND_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  LAYERED_BACKGROUNDS.md  LICENSE  README.md  README_ASSETS.md  SCRIPTS.md  clean  compile  create_test_layers.py  imgui.ini  improved_sprite_separator.py  make_sprites_transparent.py  make_transparent.py  npc_sprite_separator.py  requirements.txt  run  slice_sprite_sheet.py  sprite_separator.py  sprite_slicer.py
assets/: README.md
assets/images/backgrounds/: placeholder.txt
assets/images/backgrounds/desert/: desert_background.txt
assets/images/backgrounds/forest/: forest_background.txt
assets/images/backgrounds/snow/: snow_background.txt
assets/images/characters/: placeholder.txt
assets/images/enemies/: placeholder.txt
assets/levels/: winter_level.json
include/: Animation.hpp  AssetManager.hpp  Enemy.hpp  Game.hpp  LightingSystem.hpp  NPC.hpp  Physics.hpp  Player.hpp  RenderingSystem.hpp  SoundSystem.h  TileRenderer.hpp
scripts/: convert_audio.py  generate_test_audio.py
src/: Animation.cpp  AssetManager.cpp  CreateSprites.cpp  Enemy.cpp  Game.cpp  GameImGui.cpp  LightingSystem.cpp  NPC.cpp  Physics.cpp  Player.cpp  RenderingSystem.cpp  SoundSystem.cpp  TileRenderer.cpp  main.cpp
src/debug/: CMakeLists.txt  TestTexture.cpp
